--- a/practicante/index_practicante.html
+++ b/practicante/index_practicante.html
@@ -54,8 +54,8 @@
               </a>
               <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
                 <div class="dropdown-divider"></div>
-                <a href="login.html" class="dropdown-item">
-                  <i class="fas fa-user-minus mr-2"></i> Log Out
+                <a href="/index.html" class="dropdown-item">
+                  <i class="fas fa-user-minus mr-2"></i> Cerrar sesión
                 </a>
             </li>
             </li>
