--- a/sabonim/agregar_taekwondista.html
+++ b/sabonim/agregar_taekwondista.html
@@ -37,10 +37,10 @@
     <!-- Navbar -->
     <nav class="main-header navbar navbar-expand-md navbar-light navbar-white">
       <div class="container">
-        <a href="index_sabonim.html" class="navbar-brand">
-          <img src="../dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
-            style="opacity: .8">
-          <span class="brand-text font-weight-light">AdminLTE 3</span>
+        <a href="index_admin.html" class="navbar-brand">
+          <img src="../assets/img/World_Taekwondo.png" alt="Logo" class="brand-image"
+            style="opacity: .8"/>
+          <span class="brand-text font-weight-light">Subsistema taekwondo</span>
         </a>
 
         <button class="navbar-toggler order-1" type="button" data-toggle="collapse" data-target="#navbarCollapse"
@@ -52,23 +52,9 @@
           <!-- Left navbar links -->
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a href="#" class="nav-link">Home</a>
-            </li>
-            <li class="nav-item">
-              <a href="administrar_taekwondistas.html" class="nav-link">Practicantes</a>
-            </li>
-            <li class="nav-item">
-              <a href="administrar_solicitudes.html" class="nav-link">Solicitudes</a>
-            </li>
-            <li class="nav-item">
-              <a href="modificar_datos.html" class="nav-link">Modificar Datos Personales</a>
-            </li>
-            <li class="nav-item">
-              <a href="editar_dojang.html" class="nav-link">Modificar Datos Dojang</a>
+              <a href="index_sabonim.html" class="nav-link">Inicio</a>
             </li>
           </ul>
-
-
 
           <!-- Right navbar links -->
           <ul class="order-1 order-md-3 navbar-nav navbar-no-expand ml-auto">
@@ -79,8 +65,8 @@
               </a>
               <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
                 <div class="dropdown-divider"></div>
-                <a href="login.html" class="dropdown-item">
-                  <i class="fas fa-user-minus mr-2"></i> Log Out
+                <a href="/index.html" class="dropdown-item">
+                  <i class="fas fa-user-minus mr-2"></i> Cerrar sesión
                 </a>
             </li>
             </li>
