--- a/sabonim/index_sabonim.html
+++ b/sabonim/index_sabonim.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>AdminLTE 3 | Top Navigation</title>
+  <title>Taekwondo</title>
 
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet"
@@ -20,10 +20,10 @@
     <!-- Navbar -->
     <nav class="main-header navbar navbar-expand-md navbar-light navbar-white">
       <div class="container">
-        <a href="#" class="navbar-brand">
-          <img src="../dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
-            style="opacity: .8">
-          <span class="brand-text font-weight-light">AdminLTE 3</span>
+        <a href="index_admin.html" class="navbar-brand">
+          <img src="../assets/img/World_Taekwondo.png" alt="Logo" class="brand-image"
+            style="opacity: .8"/>
+          <span class="brand-text font-weight-light">Subsistema taekwondo</span>
         </a>
 
         <button class="navbar-toggler order-1" type="button" data-toggle="collapse" data-target="#navbarCollapse"
@@ -32,24 +32,7 @@
         </button>
 
         <div class="collapse navbar-collapse order-3" id="navbarCollapse">
-          <!-- Left navbar links -->
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a href="#" class="nav-link">Home</a>
-            </li>
-            <li class="nav-item">
-              <a href="administrar_taekwondistas.html" class="nav-link">Practicantes</a>
-            </li>
-            <li class="nav-item">
-              <a href="administrar_solicitudes.html" class="nav-link">Solicitudes</a>
-            </li>
-            <li class="nav-item">
-              <a href="modificar_datos.html" class="nav-link">Modificar Datos Personales</a>
-            </li>
-            <li class="nav-item">
-              <a href="editar_dojang.html" class="nav-link">Modificar Datos Dojang</a>
-            </li>
-          </ul>
+
 
           <!-- Right navbar links -->
           <ul class="order-1 order-md-3 navbar-nav navbar-no-expand ml-auto">
@@ -60,8 +43,8 @@
               </a>
               <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
                 <div class="dropdown-divider"></div>
-                <a href="login.html" class="dropdown-item">
-                  <i class="fas fa-user-minus mr-2"></i> Log Out
+                <a href="/index.html" class="dropdown-item">
+                  <i class="fas fa-user-minus mr-2"></i> Cerrar sesión
                 </a>
             </li>
             </li>
@@ -93,7 +76,7 @@
             <div class="container-fluid">
               <!-- Small boxes (Stat box) -->
               <div class="row">
-                <div class="col-lg-3 col-6">
+                <div class="col-lg-6 col-6">
                   <!-- small box -->
                   <div class="small-box bg-info">
                     <div class="inner">
@@ -104,7 +87,7 @@
                   </div>
                 </div>
                 <!-- ./col -->
-                <div class="col-lg-3 col-6">
+                <div class="col-lg-6 col-6">
                   <!-- small box -->
                   <div class="small-box bg-warning">
                     <div class="inner">
@@ -115,7 +98,7 @@
                   </div>
                 </div>
                 <!-- ./col -->
-                <div class="col-lg-3 col-6">
+                <div class="col-lg-6 col-6">
                   <!-- small box -->
                   <div class="small-box bg-success">
                     <div class="inner">
@@ -126,7 +109,7 @@
                   </div>
                 </div>
                 <!-- ./col -->
-                <div class="col-lg-3 col-6">
+                <div class="col-lg-6 col-6">
                   <!-- small box -->
                   <div class="small-box bg-danger">
                     <div class="inner">
@@ -141,7 +124,7 @@
               <!-- /.row -->
 
               <div class="row">
-                <div class="col-lg-3 col-6">
+                <div class="col-lg-6 col-6">
                   <!-- small box -->
                   <div class="small-box bg-info">
                     <div class="inner">
@@ -151,40 +134,6 @@
                     <a href="ver_estado_solicitud.html" class="small-box-footer">Mas informacion <i class="fas fa-arrow-circle-right"></i></a>
                   </div>
                 </div>
-                <!-- ./col -->
-                <div class="col-lg-3 col-6">
-                  <!-- small box -->
-                  <div class="small-box bg-warning">
-                    <div class="inner">
-                      <h3></h3>
-                      <p></p>
-                    </div>
-                    <a href="#" class="small-box-footer">Mas informacion <i class="fas fa-arrow-circle-right"></i></a>
-                  </div>
-                </div>
-                <!-- ./col -->
-                <div class="col-lg-3 col-6">
-                  <!-- small box -->
-                  <div class="small-box bg-success">
-                    <div class="inner">
-                      <h3></h3>
-                      <p></p>
-                    </div>
-                    <a href="#" class="small-box-footer">Mas informacion <i class="fas fa-arrow-circle-right"></i></a>
-                  </div>
-                </div>
-                <!-- ./col -->
-                <div class="col-lg-3 col-6">
-                  <!-- small box -->
-                  <div class="small-box bg-danger">
-                    <div class="inner">
-                      <h3></h3>
-                      <p></p>
-                    </div>
-                    <a href="#" class="small-box-footer">Mas informacion <i class="fas fa-arrow-circle-right"></i></a>
-                  </div>
-                </div>
-                <!-- ./col -->
               </div>
             </div><!-- /.container-fluid -->
           </section>
