--- a/index.html
+++ b/index.html
@@ -11,17 +11,14 @@
       href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback"
     />
     <!-- Font Awesome -->
-    <link
-      rel="stylesheet"
-      href="../../plugins/fontawesome-free/css/all.min.css"
-    />
+    <link rel="stylesheet" href="plugins/fontawesome-free/css/all.min.css" />
     <!-- icheck bootstrap -->
     <link
       rel="stylesheet"
-      href="../../plugins/icheck-bootstrap/icheck-bootstrap.min.css"
+      href="plugins/icheck-bootstrap/icheck-bootstrap.min.css"
     />
     <!-- Theme style -->
-    <link rel="stylesheet" href="../../dist/css/adminlte.min.css" />
+    <link rel="stylesheet" href="dist/css/adminlte.min.css" />
   </head>
   <body class="hold-transition login-page">
     <div class="login-box">
@@ -95,11 +92,11 @@
     <!-- /.login-box -->
 
     <!-- jQuery -->
-    <script src="../../plugins/jquery/jquery.min.js"></script>
+    <script src="plugins/jquery/jquery.min.js"></script>
     <!-- Bootstrap 4 -->
-    <script src="../../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- AdminLTE App -->
-    <script src="../../dist/js/adminlte.min.js"></script>
+    <script src="dist/js/adminlte.min.js"></script>
   </body>
 </html>
 <script>
