Se corrigen las rutas relativa

--- a/sabonim/administrar_solicitudes.html
+++ b/sabonim/administrar_solicitudes.html
@@ -50,7 +50,7 @@
               </a>
               <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
                 <div class="dropdown-divider"></div>
-                <a href="/index.html" class="dropdown-item">
+                <a href="../index.html" class="dropdown-item">
                   <i class="fas fa-user-minus mr-2"></i> Cerrar sesión
                 </a>
             </li>
