Navbar funcionando en todas las pantallas

--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
         window.location.href = "sabonim/index_sabonim.html";
       } else if (email == "practicante@tae.com" && password == "practicante") {
         window.location.href = "practicante/index_practicante.html";
+      } else if (email == "admin@tae.com" && password == "admin") {
+        window.location.href = "admin/index_admin.html";
       } else {
         alert("Usuario o contraseña incorrectos");
       }
