--- a/sabonim/index_sabonim.html
+++ b/sabonim/index_sabonim.html
@@ -20,7 +20,7 @@
     <!-- Navbar -->
     <nav class="main-header navbar navbar-expand-md navbar-light navbar-white">
       <div class="container">
-        <a href="index_admin.html" class="navbar-brand">
+        <a href="#" class="navbar-brand">
           <img src="../assets/img/World_Taekwondo.png" alt="Logo" class="brand-image"
             style="opacity: .8"/>
           <span class="brand-text font-weight-light">Subsistema taekwondo</span>
@@ -43,7 +43,7 @@
               </a>
               <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
                 <div class="dropdown-divider"></div>
-                <a href="/index.html" class="dropdown-item">
+                <a href="../index.html" class="dropdown-item">
                   <i class="fas fa-user-minus mr-2"></i> Cerrar sesión
                 </a>
             </li>
