--- a/admin/administrar_taekwondistas.html
+++ b/admin/administrar_taekwondistas.html
@@ -24,10 +24,10 @@
     <!-- Navbar -->
     <nav class="main-header navbar navbar-expand-md navbar-light navbar-white">
       <div class="container">
-        <a href="index_admin.html" class="navbar-brand">
-          <img src="../dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
-            style="opacity: .8">
-          <span class="brand-text font-weight-light">AdminLTE 3</span>
+        <a href="#" class="navbar-brand">
+          <img src="../assets/img/World_Taekwondo.png" alt="Logo" class="brand-image"
+            style="opacity: .8"/>
+          <span class="brand-text font-weight-light">Subsistema taekwondo</span>
         </a>
 
         <button class="navbar-toggler order-1" type="button" data-toggle="collapse" data-target="#navbarCollapse"
@@ -39,16 +39,7 @@
           <!-- Left navbar links -->
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a href="index_admin.html" class="nav-link">Home</a>
-            </li>
-            <li class="nav-item">
-              <a href="administrar_taekwondistas.html" class="nav-link">Taekwondistas</a>
-            </li>
-            <li class="nav-item">
-              <a href="administrar_dojangs.html" class="nav-link">Dojangs</a>
-            </li>
-            <li class="nav-item">
-              <a href="administrar_solicitudes.html" class="nav-link">Solicitudes</a>
+              <a href="index_admin.html" class="nav-link">Inicio</a>
             </li>
           </ul>
 
@@ -56,13 +47,13 @@
           <ul class="order-1 order-md-3 navbar-nav navbar-no-expand ml-auto">
             <!-- Notifications Dropdown Menu -->
             <li class="nav-item dropdown">
-              <a class="nav-link" data-toggle="dropdown">
+              <a class="nav-link" data-toggle="dropdown" href="#">
                 <i class="far fa-user"></i>
               </a>
               <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
                 <div class="dropdown-divider"></div>
-                <a href="index.html" class="dropdown-item">
-                  <i class="fas fa-user-minus mr-2"></i> Log Out
+                <a href="../index.html" class="dropdown-item">
+                  <i class="fas fa-user-minus mr-2"></i> Cerrar sesión
                 </a>
             </li>
             </li>
