--- a/admin/editar_taekwondista.html
+++ b/admin/editar_taekwondista.html
@@ -37,7 +37,7 @@
     <!-- Navbar -->
     <nav class="main-header navbar navbar-expand-md navbar-light navbar-white">
       <div class="container">
-        <a href="index_admin.html" class="navbar-brand">
+        <a href="#" class="navbar-brand">
           <img src="../dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
             style="opacity: .8">
           <span class="brand-text font-weight-light">AdminLTE 3</span>
