--- a/admin/index_admin.html
+++ b/admin/index_admin.html
@@ -21,9 +21,9 @@
     <nav class="main-header navbar navbar-expand-md navbar-light navbar-white">
       <div class="container">
         <a href="#" class="navbar-brand">
-          <img src="../dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
-            style="opacity: .8">
-          <span class="brand-text font-weight-light">AdminLTE 3</span>
+          <img src="../assets/img/World_Taekwondo.png" alt="Logo" class="brand-image"
+            style="opacity: .8"/>
+          <span class="brand-text font-weight-light">Subsistema taekwondo</span>
         </a>
 
         <button class="navbar-toggler order-1" type="button" data-toggle="collapse" data-target="#navbarCollapse"
@@ -32,21 +32,6 @@
         </button>
 
         <div class="collapse navbar-collapse order-3" id="navbarCollapse">
-          <!-- Left navbar links -->
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a href="#" class="nav-link">Home</a>
-            </li>
-            <li class="nav-item">
-              <a href="administrar_taekwondistas.html" class="nav-link">Taekwondistas</a>
-            </li>
-            <li class="nav-item">
-              <a href="administrar_dojangs.html" class="nav-link">Dojangs</a>
-            </li>
-            <li class="nav-item">
-              <a href="administrar_solicitudes.html" class="nav-link">Solicitudes</a>
-            </li>
-          </ul>
 
           <!-- Right navbar links -->
           <ul class="order-1 order-md-3 navbar-nav navbar-no-expand ml-auto">
@@ -57,7 +42,7 @@
               </a>
               <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
                 <div class="dropdown-divider"></div>
-                <a href="/index.html" class="dropdown-item">
+                <a href="../index.html" class="dropdown-item">
                   <i class="fas fa-user-minus mr-2"></i> Cerrar sesión
                 </a>
             </li>
@@ -90,7 +75,7 @@
             <div class="container-fluid">
               <!-- Small boxes (Stat box) -->
               <div class="row">
-                <div class="col-lg-3 col-6">
+                <div class="col-lg-4 col-6">
                   <!-- small box -->
                   <div class="small-box bg-info">
                     <div class="inner">
@@ -101,7 +86,7 @@
                   </div>
                 </div>
                 <!-- ./col -->
-                <div class="col-lg-3 col-6">
+                <div class="col-lg-4 col-6">
                   <!-- small box -->
                   <div class="small-box bg-success">
                     <div class="inner">
@@ -112,7 +97,7 @@
                   </div>
                 </div>
                 <!-- ./col -->
-                <div class="col-lg-3 col-6">
+                <div class="col-lg-4 col-6">
                   <!-- small box -->
                   <div class="small-box bg-warning">
                     <div class="inner">
@@ -122,21 +107,6 @@
                     <a href="administrar_solicitudes.html" class="small-box-footer">Mas informacion <i class="fas fa-arrow-circle-right"></i></a>
                   </div>
                 </div>
-                <!-- ./col -->
-                <div class="col-lg-3 col-6">
-                  <!-- small box -->
-                  <div class="small-box bg-danger">
-                    <div class="inner">
-                      <h3></h3>
-                      <p></p>
-                    </div>
-                    <div class="icon">
-                      <i class="ion ion-pie-graph"></i>
-                    </div>
-                    <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
-                  </div>
-                </div>
-                <!-- ./col -->
               </div>
               <!-- /.row -->
             </div><!-- /.container-fluid -->
