--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
     <!-- Navbar -->
     <nav class="main-header navbar navbar-expand-md navbar-light navbar-white">
       <div class="container">
-        <a href="index_admin.html" class="navbar-brand">
+        <a href="#" class="navbar-brand">
           <img src="assets/img/World_Taekwondo.png" alt="Logo" class="brand-image"
             style="opacity: .8"/>
           <span class="brand-text font-weight-light">Subsistema taekwondo</span>
