--- a/practicante/index_practicante.html
+++ b/practicante/index_practicante.html
@@ -21,9 +21,9 @@
     <nav class="main-header navbar navbar-expand-md navbar-light navbar-white">
       <div class="container">
         <a href="#" class="navbar-brand">
-          <img src="../dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
-            style="opacity: .8">
-          <span class="brand-text font-weight-light">AdminLTE 3</span>
+          <img src="../assets/img/World_Taekwondo.png" alt="Logo" class="brand-image"
+            style="opacity: .8"/>
+          <span class="brand-text font-weight-light">Subsistema taekwondo</span>
         </a>
 
         <button class="navbar-toggler order-1" type="button" data-toggle="collapse" data-target="#navbarCollapse"
@@ -35,13 +35,7 @@
           <!-- Left navbar links -->
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a href="#" class="nav-link">Home</a>
-            </li>
-            <li class="nav-item">
-              <a href="ver_dojang.html" class="nav-link">Dojang</a>
-            </li>
-            <li class="nav-item">
-              <a href="modificar_datos.html" class="nav-link">Modificar Datos</a>
+              <a href="index_practicante.html" class="nav-link">Inicio</a>
             </li>
           </ul>
 
@@ -54,7 +48,7 @@
               </a>
               <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
                 <div class="dropdown-divider"></div>
-                <a href="/index.html" class="dropdown-item">
+                <a href="../index.html" class="dropdown-item">
                   <i class="fas fa-user-minus mr-2"></i> Cerrar sesión
                 </a>
             </li>
@@ -87,7 +81,7 @@
             <div class="container-fluid">
               <!-- Small boxes (Stat box) -->
               <div class="row">
-                <div class="col-lg-3 col-6">
+                <div class="col-lg-4 col-6">
                   <!-- small box -->
                   <div class="small-box bg-info">
                     <div class="inner">
@@ -98,7 +92,7 @@
                   </div>
                 </div>
                 <!-- ./col -->
-                <div class="col-lg-3 col-6">
+                <div class="col-lg-4 col-6">
                   <!-- small box -->
                   <div class="small-box bg-success">
                     <div class="inner">
@@ -109,7 +103,7 @@
                   </div>
                 </div>
                 <!-- ./col -->
-                <div class="col-lg-3 col-6">
+                <div class="col-lg-4 col-6">
                   <!-- small box -->
                   <div class="small-box bg-warning">
                     <div class="inner">
@@ -119,21 +113,7 @@
                     <a href="ver_estado_solicitud.html" class="small-box-footer">Mas informacion <i class="fas fa-arrow-circle-right"></i></a>
                   </div>
                 </div>
-                <!-- ./col -->
-                <div class="col-lg-3 col-6">
-                  <!-- small box -->
-                  <div class="small-box bg-danger">
-                    <div class="inner">
-                      <h3></h3>
-                      <p></p>
-                    </div>
-                    <div class="icon">
-                      <i class="ion ion-pie-graph"></i>
-                    </div>
-                    <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
-                  </div>
-                </div>
-                <!-- ./col -->
+
               </div>
               <!-- /.row -->
             </div><!-- /.container-fluid -->
