--- a/sabonim/administrar_taekwondistas.html
+++ b/sabonim/administrar_taekwondistas.html
@@ -24,7 +24,7 @@
     <!-- Navbar -->
     <nav class="main-header navbar navbar-expand-md navbar-light navbar-white">
       <div class="container">
-        <a href="index_admin.html" class="navbar-brand">
+        <a href="#" class="navbar-brand">
           <img src="../assets/img/World_Taekwondo.png" alt="Logo" class="brand-image"
             style="opacity: .8"/>
           <span class="brand-text font-weight-light">Subsistema taekwondo</span>
@@ -43,18 +43,17 @@
             </li>
           </ul>
 
-
           <!-- Right navbar links -->
           <ul class="order-1 order-md-3 navbar-nav navbar-no-expand ml-auto">
             <!-- Notifications Dropdown Menu -->
             <li class="nav-item dropdown">
-              <a class="nav-link" data-toggle="dropdown">
+              <a class="nav-link" data-toggle="dropdown" href="#">
                 <i class="far fa-user"></i>
               </a>
               <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
                 <div class="dropdown-divider"></div>
-                <a href="index.html" class="dropdown-item">
-                  <i class="fas fa-user-minus mr-2"></i> Log Out
+                <a href="../index.html" class="dropdown-item">
+                  <i class="fas fa-user-minus mr-2"></i> Cerrar sesión
                 </a>
             </li>
             </li>
