--- a/sabonim/administrar_taekwondistas.html
+++ b/sabonim/administrar_taekwondistas.html
@@ -129,7 +129,7 @@
                         <td class="align-middle">36218346743</td>
                         <td class="text-right py-0 align-middle">
                           <div class="btn-group btn-group-sm">
-                            <a href="ver_taekwondista.html" class="btn btn-info"><i class="fas fa-eye"></i></a>
+                            <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i class="fas fa-eye"></i></button>
                             <a href="editar_taekwondista.html" class="btn btn-warning"><i class="fas fa-edit"></i></a>
                             <a type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-danger"><i
                                 class="fas fa-trash"></i></a>
@@ -143,7 +143,7 @@
                         <td class="align-middle">123432123</td>
                         <td class="text-right py-0 align-middle">
                           <div class="btn-group btn-group-sm">
-                            <a href="ver_taekwondista.html" class="btn btn-info"><i class="fas fa-eye"></i></a>
+                            <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i class="fas fa-eye"></i></button>
                             <a href="editar_taekwondista.html" class="btn btn-warning"><i class="fas fa-edit"></i></a>
                             <a type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-danger"><i
                                 class="fas fa-trash"></i></a>
@@ -157,7 +157,7 @@
                         <td class="align-middle">3441233254</td>
                         <td class="text-right py-0 align-middle">
                           <div class="btn-group btn-group-sm">
-                            <a href="ver_taekwondista.html" class="btn btn-info"><i class="fas fa-eye"></i></a>
+                            <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i class="fas fa-eye"></i></button>
                             <a href="editar_taekwondista.html" class="btn btn-warning"><i class="fas fa-edit"></i></a>
                             <a type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-danger"><i
                                 class="fas fa-trash"></i></a>
@@ -171,7 +171,7 @@
                         <td class="align-middle">453234443</td>
                         <td class="text-right py-0 align-middle">
                           <div class="btn-group btn-group-sm">
-                            <a href="ver_taekwondista.html" class="btn btn-info"><i class="fas fa-eye"></i></a>
+                            <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i class="fas fa-eye"></i></button>
                             <a href="editar_taekwondista.html" class="btn btn-warning"><i class="fas fa-edit"></i></a>
                             <a type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-danger"><i
                                 class="fas fa-trash"></i></a>
@@ -185,7 +185,7 @@
                         <td class="align-middle">36218346743</td>
                         <td class="text-right py-0 align-middle">
                           <div class="btn-group btn-group-sm">
-                            <a href="ver_taekwondista.html" class="btn btn-info"><i class="fas fa-eye"></i></a>
+                            <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i class="fas fa-eye"></i></button>
                             <a href="editar_taekwondista.html" class="btn btn-warning"><i class="fas fa-edit"></i></a>
                             <a type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-danger"><i
                                 class="fas fa-trash"></i></a>
@@ -199,7 +199,7 @@
                         <td class="align-middle">36218346743</td>
                         <td class="text-right py-0 align-middle">
                           <div class="btn-group btn-group-sm">
-                            <a href="ver_taekwondista.html" class="btn btn-info"><i class="fas fa-eye"></i></a>
+                            <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i class="fas fa-eye"></i></button>
                             <a href="editar_taekwondista.html" class="btn btn-warning"><i class="fas fa-edit"></i></a>
                             <a type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-danger"><i
                                 class="fas fa-trash"></i></a>
@@ -213,7 +213,7 @@
                         <td class="align-middle">36218346743</td>
                         <td class="text-right py-0 align-middle">
                           <div class="btn-group btn-group-sm">
-                            <a href="ver_taekwondista.html" class="btn btn-info"><i class="fas fa-eye"></i></a>
+                            <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i class="fas fa-eye"></i></button>
                             <a href="editar_taekwondista.html" class="btn btn-warning"><i class="fas fa-edit"></i></a>
                             <a type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-danger"><i
                                 class="fas fa-trash"></i></a>
@@ -227,7 +227,7 @@
                         <td class="align-middle">36218346743</td>
                         <td class="text-right py-0 align-middle">
                           <div class="btn-group btn-group-sm">
-                            <a href="ver_taekwondista.html" class="btn btn-info"><i class="fas fa-eye"></i></a>
+                            <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i class="fas fa-eye"></i></button>
                             <a href="editar_taekwondista.html" class="btn btn-warning"><i class="fas fa-edit"></i></a>
                             <a type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-danger"><i
                                 class="fas fa-trash"></i></a>
@@ -238,6 +238,48 @@
                   </table>
                 </div>
                 <!-- /.card-body -->
+
+                <!-- Modal Ver taekwondista-->
+                <div class="modal fade" id="modal-lg">
+                  <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h4 class="modal-title">Informacion Taekwondista</h4>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        <div class="row">
+                          <div class="col-6">
+                            <img src="../dist/img/user8-128x128.jpg" alt="user-avatar" class="img-circle img-fluid ml-5">
+                            <br><br><br>
+                            <h6><b>Contacto Emergencia: </b></h6>
+                            <h6>• <b>Nombre: </b>Alicia Cabrera</h6>
+                            <h6>• <b>Telefono: </b>(351) 725-5025</h6>
+                            <h6>• <b>Relacion: </b>Madre</h6>
+                          </div>
+                          <div class="col-6">
+                            <p><b>Nombre: </b>Lucas Matias</p>
+                            <p><b>Apellido: </b>Godoy</p>
+                            <p><b>DNI: </b>46629934</p>
+                            <p><b>Peso: </b>73.6 kg</p>
+                            <p><b>Altura: </b>176 cm</p>
+                            <p><b>Fecha Nacimiento: </b>11/08/2000</p>
+                            <p><b>Nacionalidad: </b>Argentina</p>
+                            <p><b>Telefono: </b>(351) 362-4961</p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="modal-footer justify-content-left">
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Cerrar</button>
+                      </div>
+                    </div>
+                    <!-- /.modal-content -->
+                  </div>
+                  <!-- /.modal-dialog -->
+                </div>
+                <!-- /.modal -->
 
                 <!-- Modal -->
                 <div class="modal fade" id="modal-danger">
