--- a/practicante/ver_dojang.html
+++ b/practicante/ver_dojang.html
@@ -114,7 +114,7 @@
                               <td class="align-middle">36218346743</td>
                               <td class="text-right py-0 align-middle">
                                 <div class="btn-group btn-group-sm">
-                                  <a href="ver_taekwondista.html" class="btn btn-info"><i class="fas fa-eye"></i></a>
+                                  <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i class="fas fa-eye"></i></button>
                                 </div>
                               </td>
                             </tr>
@@ -124,7 +124,7 @@
                               <td class="align-middle">123432123</td>
                               <td class="text-right py-0 align-middle">
                                 <div class="btn-group btn-group-sm">
-                                  <a href="ver_taekwondista.html" class="btn btn-info"><i class="fas fa-eye"></i></a>
+                                  <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i class="fas fa-eye"></i></button>
                                 </div>
                               </td>
                             </tr>
@@ -134,7 +134,7 @@
                               <td class="align-middle">3441233254</td>
                               <td class="text-right py-0 align-middle">
                                 <div class="btn-group btn-group-sm">
-                                  <a href="ver_taekwondista.html" class="btn btn-info"><i class="fas fa-eye"></i></a>
+                                  <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i class="fas fa-eye"></i></button>
                                 </div>
                               </td>
                             </tr>
@@ -144,7 +144,7 @@
                               <td class="align-middle">453234443</td>
                               <td class="text-right py-0 align-middle">
                                 <div class="btn-group btn-group-sm">
-                                  <a href="ver_taekwondista.html" class="btn btn-info"><i class="fas fa-eye"></i></a>
+                                  <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i class="fas fa-eye"></i></button>
                                 </div>
                               </td>
                             </tr>
@@ -154,7 +154,7 @@
                               <td class="align-middle">36218346743</td>
                               <td class="text-right py-0 align-middle">
                                 <div class="btn-group btn-group-sm">
-                                  <a href="ver_taekwondista.html" class="btn btn-info"><i class="fas fa-eye"></i></a>
+                                  <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i class="fas fa-eye"></i></button>
                                 </div>
                               </td>
                             </tr>
@@ -164,7 +164,7 @@
                               <td class="align-middle">36218346743</td>
                               <td class="text-right py-0 align-middle">
                                 <div class="btn-group btn-group-sm">
-                                  <a href="ver_taekwondista.html" class="btn btn-info"><i class="fas fa-eye"></i></a>
+                                  <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i class="fas fa-eye"></i></button>
                                 </div>
                               </td>
                             </tr>
@@ -174,7 +174,7 @@
                               <td class="align-middle">36218346743</td>
                               <td class="text-right py-0 align-middle">
                                 <div class="btn-group btn-group-sm">
-                                  <a href="ver_taekwondista.html" class="btn btn-info"><i class="fas fa-eye"></i></a>
+                                  <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i class="fas fa-eye"></i></button>
                                 </div>
                               </td>
                             </tr>
@@ -184,7 +184,7 @@
                               <td class="align-middle">36218346743</td>
                               <td class="text-right py-0 align-middle">
                                 <div class="btn-group btn-group-sm">
-                                  <a href="ver_taekwondista.html" class="btn btn-info"><i class="fas fa-eye"></i></a>
+                                  <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i class="fas fa-eye"></i></button>
                                 </div>
                               </td>
                             </tr>
@@ -195,7 +195,7 @@
                   </div>
                   <div class="col-6">
                     <h6 class="mt-5"><b>Ubicacion:</b></h6>
-                    <img src="../dist/img/dojang.jpg" alt="Dojang" class="img-fluid shadow">
+                    <div class="mapouter"><div class="gmap_canvas"><iframe src="https://maps.google.com/maps?q=Av.%20Velez%20Sarsfield%201611&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=&amp;output=embed" frameborder="0" scrolling="no" style="width: 490px; height: 400px;"></iframe><style>.mapouter{position:relative;height:400px;width:490px;background:#fff;}</style><a href="https://blooketjoin.org" style="color:#fff !important; position:absolute !important; top:0 !important; z-index:0 !important;">blooket join</a><style>.gmap_canvas{overflow:hidden;height:400px;width:490px}.gmap_canvas iframe{position:relative;z-index:2}</style></div></div>
                     <h6 class="mt-3"><b>Direccion:</b> Av. Velez Sarsfield 1611</h6>
                     <h6><b>Ciudad:</b> Cordoba</h6>
                   </div>
@@ -207,6 +207,48 @@
       </div>
     </div>
     <!-- /.content-wrapper -->
+
+    <!-- Modal Ver taekwondista-->
+    <div class="modal fade" id="modal-lg">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title">Informacion Taekwondista</h4>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-6">
+                <img src="../dist/img/user8-128x128.jpg" alt="user-avatar" class="img-circle img-fluid ml-5">
+                <br><br><br>
+                <h6><b>Contacto Emergencia: </b></h6>
+                <h6>• <b>Nombre: </b>Alicia Cabrera</h6>
+                <h6>• <b>Telefono: </b>(351) 725-5025</h6>
+                <h6>• <b>Relacion: </b>Madre</h6>
+              </div>
+              <div class="col-6">
+                <p><b>Nombre: </b>Lucas Matias</p>
+                <p><b>Apellido: </b>Godoy</p>
+                <p><b>DNI: </b>46629934</p>
+                <p><b>Peso: </b>73.6 kg</p>
+                <p><b>Altura: </b>176 cm</p>
+                <p><b>Fecha Nacimiento: </b>11/08/2000</p>
+                <p><b>Nacionalidad: </b>Argentina</p>
+                <p><b>Telefono: </b>(351) 362-4961</p>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer justify-content-left">
+            <button type="button" class="btn btn-primary" data-dismiss="modal">Cerrar</button>
+          </div>
+        </div>
+        <!-- /.modal-content -->
+      </div>
+      <!-- /.modal-dialog -->
+    </div>
+    <!-- /.modal -->
 
     <!-- Control Sidebar -->
     <aside class="control-sidebar control-sidebar-dark">
