--- a/sabonim/index_sabonim.html
+++ b/sabonim/index_sabonim.html
@@ -143,7 +143,7 @@
               <div class="row">
                 <div class="col-lg-6 col-6">
                   <!-- small box -->
-                  <div class="small-box bg-info">
+                  <div class="small-box bg-default">
                     <div class="inner">
                       <h3>Solicitudes</h3>
                       <p>Ver estado de Solicitudes</p>
